# SmartKnobCV_STM32

./: .gitignore  LICENSE  README.md  platformio.ini  stm32_smart_knob_learning_path.md
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: README.md  generic-subagent.agent.md  planner.agent.md  qa-validator.agent.md  scribe.agent.md  worker.agent.md
.github/instructions/: README.md  cpp.instructions.md  markdown.instructions.md  python.instructions.md
.github/processes/: agent-patterns.md  standard-repo-structure.md
.github/prompts/: README.md
FOC_Learnings/: README.md
FOC_Learnings/firmware_iterations/: main_backup_complex.bak
PoC/: README.md
PoC/docs/: ARCHITECTURE.md  README.md  serial-protocol.md
PoC/docs/dev/: CHANGELOG.md  KNOWN-ISSUES.md  README.md  ROADMAP.md
PoC/docs/guides/: GETTING-STARTED.md  (+1 more)
PoC/software/: pyproject.toml  requirements.txt
PoC/software/config/: contexts.json  presets.json
PoC/software/gui/: app.py
PoC/software/smartknob/: __init__.py  driver.py  protocol.py  windows_link.py
PoC/software/smartknob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PoC/software/smartknob/context/: __init__.py
PoC/software/smartknob/integrations/: brightness.py  scroll.py
PoC/software/smartknob_windows/: __init__.py  windows_link.py
PoC/software/smartknob_windows/gui/: __init__.py  app.py
PoC/software/smartknob_windows/integrations/: __init__.py
src/: main_AngleControl.bak  main_FullControl.bak  main_firstSSIWorking.bak
tools/: smartknob_simple.py  volume_control.py  windows_link.py  zoom_control.py
(+13 files in other folders)
